<resources>
    <string name="app_name">HouseBuddy</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="logged_in_user">Logged In User</string>
    <string name="userLoggedOut">Logged Out</string>
    <string name="log_out">Log Out</string>
    <string name="sign_in_with_google">Sign in with Google..</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="chore_schedule">Chore Schedule</string>
    <string name="to_do_list">To Do List</string>
    <string name="shopping_list">Shopping List</string>
    <string name="utility_reservation">Utility Reservation</string>
    <string name="expense_tracker">Expense Tracker</string>
    <string name="title_activity_view_task">ViewTaskActivity</string>
    <string name="facebook_app_id">338645476703466</string>
    <string name="fb_login_protocol_scheme">fb338645476703466</string>
    <string name="facebook_application_id" translatable="false">338645476703466</string>
    <string name="title_activity_edit_task">EditTaskActivity</string>
    <plurals name="task_deleted">
        <item quantity="one">Task deleted.</item>
        <item quantity="other">Tasks deleted.</item>
    </plurals>
    <plurals name="delete_task_question">
        <item quantity="one">Delete this task?</item>
        <item quantity="other">Delete these tasks?</item>
    </plurals>
    <plurals name="task_marked_completed">
        <item quantity="one">Task marked as completed.</item>
        <item quantity="other">Tasks marked as completed.</item>
    </plurals>
    <plurals name="delete_shopping_item_question">
        <item quantity="one">Delete this item?</item>
        <item quantity="other">Delete these items?</item>
    </plurals>
    <string name="action_undo">Undo</string>
    <string name="task_no_description">This task has no description.</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="new_task">New Task</string>
    <string name="new_expense">New Expense</string>
    <string name="price">Price</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="mark_completed">Mark as completed</string>
    <string name="edit_task">Edit task</string>
    <string name="delete_task">Delete task</string>
    <string name="enter_name_alert">Please enter a name.</string>
    <string name="enter_price_alert">Please enter a price.</string>
    <string name="discard">Discard</string>
    <string name="discard_changes_question">Discard changes?</string>
    <plurals name="items_selected">
        <item quantity="one">%d item selected.</item>
        <item quantity="other">%d items selected.</item>
    </plurals>
    <string name="task_saved">Task saved.</string>
    <string name="mark_not_completed">Mark as not completed</string>
    <string name="title_activity_expenses_list">ExpensesListActivity</string>
    <string name="item">Item</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="info">Info</string>
    <string name="ok">OK</string>
    <string name="loading_user_data">Loading user data…</string>
    <string name="no_household">It looks like you don\'t have a household yet! \n \nPress one of the buttons below to join an existing household or to create your own.</string>
    <string name="join_household">Join a household</string>
    <string name="create_household">Create a household</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="welcome_message">Welcome to HouseBuddy! You are one step away from completing your account! \n \nFill out the form below to start managing households.</string>
    <string name="complete_account">Complete account</string>
    <string name="account_updated">User information updated.</string>
    <string name="account_updated_failed">Failed to update user information.</string>
    <string name="invite_to_household">Invite to household</string>
    <string name="invite_user">Invite user</string>
    <string name="invite_code_message">The invitation code for this household is:</string>
    <string name="renew_code">Renew code</string>
    <string name="code_copied">Code copied to clipboard.</string>
    <string name="join_household_message">Fill in the invitation code of the household you wish to join below.</string>
    <string name="join">Join</string>
    <string name="invitation_code">Invitation code</string>
    <string name="invalid_invitation_code">Invalid invitation code.</string>
    <string name="required_field">This field is required.</string>
    <string name="create">Create</string>
    <string name="new_household">New Household</string>
    <string name="join_household_failed">Failed to join household.</string>
    <string name="create_household_failed">Failed to create household.</string>
    <string name="leave_household">Leave household</string>
    <string name="leave_household_message">Are you sure you want to leave this household?</string>
    <string name="leave_household_failed">Failed to leave household.</string>
    <string name="to_do_list_empty">It looks like there are no tasks!</string>
    <string name="delete_task_failed">Failed to delete task %s from the database.</string>
    <string name="delete_tasks_failed">Failed to delete one or more tasks.</string>
    <string name="add_tasks_failed">Failed to add one or more tasks.</string>
    <string name="edit_task_failed">Failed to edit task.</string>
    <string name="title_activity_household_feed">HouseholdFeed</string>
    <string name="action_added_task">Added task</string>
    <string name="action_removed_task">Removed task</string>
    <string name="action_removed_tasks">Removed one or more tasks</string>
    <string name="action_removed_product">Removed product</string>
    <string name="action_added_product">Added product</string>
    <string name="change_info">%s - %s</string>
    <string name="home">Home</string>
    <string name="household_feed">Household feed</string>
    <string name="household_members">Household members</string>
    <string name="no_data_available">No data available.</string>
    <string name="action_edited_task">Edited task</string>
    <string name="mark_as_complete">Mark as Complete</string>
    <string name="edit_shopping_item">Edit Shopping Item</string>
    <string name="delete_shopping_item">Delete Shopping Item</string>
    <string name="item_name">Item Name</string>
    <string name="item_info">Item Info</string>
    <string name="saved_shopping_item">Shopping Item Saved</string>
</resources>
