<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="246dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/choreScheduleBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chore_schedule" />

        <Button
            android:id="@+id/toDoListBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="buttonToDoList"
            android:text="@string/to_do_list" />

        <Button
            android:id="@+id/shoppingListBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shopping_list" />

        <Button
            android:id="@+id/utilityReservationBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/utility_reservation" />

        <Button
            android:id="@+id/expenseTrackerBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="buttonExpensesList"
            android:text="@string/expense_tracker" />
    </LinearLayout>

    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:onClick="signOut"
        android:text="@string/log_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>